<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.home.HomeFragment">

        <ImageView
            android:id="@+id/tv_home_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="13dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/img_home_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_home_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="215dp"
            android:background="@color/white"
            android:padding="13dp"
            android:src="@drawable/ic_home_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_home_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="115dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_home_logo"
            app:tabIndicatorColor="@color/gray900"
            app:tabIndicatorHeight="3dp"
            app:tabSelectedTextColor="@color/gray900"
            app:tabTextColor="@color/gray400">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabitem_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_recommend" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabitem_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_popular" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabitem_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_new" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>